--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,35 @@ margin-right: 400px;
     margin-left: 30px;
     padding-top: 10px;
 }
+/* Media Query for Mobile Devices */
+@media screen and (max-width: 600px) {
+    .all {
+        margin: 0 10px; /* Adjust margins for smaller screens */
+    }
+
+    .header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .name {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    #position {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .container1,
+    .educationtext {
+        flex-direction: column;
+    }
+
+    .experienceDescription,
+    .additionalInformationtext {
+        margin-left: 0;
+        text-align: justify;
+    }
+}
